# NovaMsg

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  AppContent.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: MessageEditor.vue
src/composables/: useAppUpdate.ts  useConfig.ts  useFileOps.ts  useMessageIds.ts  usePreview.ts  useTheme.ts  useValidation.ts
src/generator/: codeFormatter.ts  fsWrapper.ts  generateProtocols.ts  index.ts  renderModel.ts  templates.ts  typeMapper.ts  types.ts
src/utils/: managedPaths.ts  update.ts  xmlParser.ts  xmlSerializer.ts
