[package]
name = "NovaMsg"
version = "1.0.2"
description = "游戏前后端网络协议一键生成工具"
authors = ["Sunshine"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nova_msg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
